syntax = "proto3";

message CounterIncremented { }