syntax = "proto3";

message CounterRemoved { }